fix->comment button issue on mobile display

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -58,7 +58,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .card-footer {
+  .post-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
